--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
+﻿
 <div id="app">
 
   <template>
@@ -10,6 +7,7 @@
         <b-nav-item to="/">Home</b-nav-item>
         <b-nav-item to="/Positions">Positions</b-nav-item>
         <b-nav-item to="/Loans">Loans</b-nav-item>
+        <b-nav-item to="/Banks">Banks</b-nav-item>
         <b-nav-item to="/users">Users</b-nav-item>
         <!-- Navbar dropdowns -->
         <b-nav-item-dropdown text="User" right>
@@ -36,7 +34,7 @@
 @section Scripts {
     <script type="module" src="~/js/pages/userPage.js"></script>
     <script type="module" src="~/js/components/debugButton.js"></script>
-    <script type="text/javascript" src="~/js/user/validate.js"></script>
+    <script type="text/javascript" src="~/js/services/validate.js"></script>
     <script type="text/javascript" src="~/js/services/userRequests.js"></script>
     <script type="module" src="~/js/app.js"></script>
     
