--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,11 +3,15 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+  position: relative;
+  font-size: 10px;
 }
-@media (min-width: 768px) {
+@media (min-width: 700px) {
   html {
-    font-size: 16px;
+    font-size: 14px;
+    position: relative;
+    padding-left: 5%;
+    padding-right: 5%;
   }
 }
 
@@ -21,7 +25,6 @@ html {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
   min-height: 100%;
 }
 
@@ -37,16 +40,4 @@ body {
   /* Set the fixed height of the footer here */
   height: 30px;
   line-height: 30px; /* Vertically center the text there */
-}
-
-.error {
-  color: red;
-}
-
-.success {
-  color: green;
-}
-
-.loading {
-
 }
