--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Networth</title>
-
-    <link rel="stylesheet" href="~/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/bootstrap-vue.min.css" />
+    <link rel="stylesheet" href="~/css/vuetify.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
@@ -27,9 +28,10 @@
     <environment include="Development">
         <script src="js/vendor/vue.js"></script>
         <script src="js/vendor/axios.min.js"></script>
-        <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-        <script src="https://unpkg.com/vuejs-datepicker"></script>
-        <script src="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
+        <script src="js/vendor/vue-router.min.js"></script>
+        <script src="js/vendor/vuejs-datepicker.min.js"></script>
+        <script src="js/vendor/vuetify.min.js"></script>
+        <script src="js/vendor/bootstrap-vue.min.js"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
