Started working on temperaments pie chart

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
         <script src="js/vendor/vuejs-datepicker.min.js"></script>
         <script src="js/vendor/vuetify.min.js"></script>
         <script src="js/vendor/bootstrap-vue.min.js"></script>
+        <script src="js/vendor/highcharts-custom.src.js"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
